# aoc-2024-rust

./: Cargo.toml
.github/workflows/: codspeed.yml
benches/: day1.rs
src/: day1.rs  day2.rs  lib.rs
