[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
fxhash = "0.2.1"
peg = "0.8.4"
rayon = "1.10.0"
tinyvec = { version = "1.8.0", features = ["alloc", "std"] }
winnow = "0.6.20"

[profile.release]
debug = true
codegen-units = 1
panic = "abort"
lto = true


[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "day1"
harness = false
